Major bugfixing and cleanup

--- a/Widgets/res/layout-large/list_content_header.xml
+++ b/Widgets/res/layout-large/list_content_header.xml
@@ -5,7 +5,7 @@
     android:paddingLeft="?attr/listPreferredItemPaddingLeft" >
 
     <TextView
-        android:id="@android:id/text1"
+        android:id="@+id/text1"
         style="?attr/listContentHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
