--- a/Widgets/res/layout/list_header.xml
+++ b/Widgets/res/layout/list_header.xml
@@ -5,10 +5,10 @@
     android:paddingLeft="?attr/listPreferredItemPaddingLeft" >
 
     <TextView
-        android:id="@android:id/text1"
+        android:id="@+id/text1"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textColor="?attr/listHeaderTextColor" />
+        android:layout_height="wrap_content" />
+        <!-- android:textColor="?attr/listHeaderTextColor" /> -->
 
 </LinearLayout>
