--- a/Widgets/res/layout/list_item_base.xml
+++ b/Widgets/res/layout/list_item_base.xml
@@ -3,8 +3,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="?attr/iconSize"
-        android:layout_height="?attr/iconSize"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_gravity="center_vertical"
         android:scaleType="fitCenter" >
     </ImageView>
